namespcae.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: flappybird-namespace
  labels:
    name: flappybird-namespace
