flappybird-deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: flappybird-deployment
  namespace: flappybird-namespace
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: flappybird-game
    spec:
      containers:
      - name: flappybird-game
        image: bhargavbunny94/flappybird 
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
