ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /flappybird
        backend:
          serviceName: flappybird-game-svc
          servicePort: 80
